[package]
name = "hypixelstats"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
cursive = {version = "0.18", features = ["toml"] }
ratatui = "*"
tui-textarea = "*"
case = "1.0.0"
base64 = "0.21.7"
image = "0.24"
csv = "1.3"
